fix spacing of trusted div

--- a/stacksquad_main/static/css/home.css
+++ b/stacksquad_main/static/css/home.css
@@ -498,7 +498,7 @@ nav.scrolled {
     letter-spacing: 1px;
     color: white;
     margin-bottom: 2.8rem;
-    margin-top: -2rem;
+    margin-top: 0rem;
     font-weight: 500;
 }
 
